@@ -1,3 +1,8 @@
+2002-09-29  Havoc Pennington  <hp@pobox.com>
+
+	* eggaccelerators.c: update from libegg to get fix from Ralph
+	Loader for <Super> <Hyper> <Meta> parsing, #93005
+
 2002-08-21  Deepa Natarajan <deepa.natarajan@wipro.com>
  
 	* gnome-keybinding-properties.c: Added [un]maximize metacity bindings.
